corrected icon placement in navbar on mobile and tablet

--- a/CSS/mobileApps.css
+++ b/CSS/mobileApps.css
@@ -122,6 +122,7 @@
   background-color: #333;
   position: relative;
 	width: 100%;
+	text-align: left;
 }
 
 #navbar #myLinks {
