--- a/CSS/tabletApps.css
+++ b/CSS/tabletApps.css
@@ -129,6 +129,7 @@
   background-color: #333;
   position: relative;
 	width: 100%;
+	text-align: left;
 }
 
 #navbar #myLinks {
